[package]
name = "ex3-merkle"
version = "0.15.0"
license = "MIT"
authors = ["Deland Labs Core Dev <delandlabs@gmail.com>"]
edition = "2021"
description = "The most advanced Merkle Tree library for Rust. Supports creating and verifying proofs, multi-proofs, as well as advanced features, such as tree diffs, transactional changes, and rollbacks"

homepage = "https://github.com/Deland-Labs/rs-merkle"
repository = "https://github.com/Deland-Labs/rs-merkle"
readme = "README.md"
keywords = ["merkle", "tree", "proof", "hash", "multiproof",]
exclude = ["/ci/*", "/scripts/*", "/.github/*", "/bors.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { version = "0.10", default-features = false }

# standard crate data is left out
[dev-dependencies]
rayon = "1.5.1"

[features]
default = ['std']
std = ["sha2/std"]
